Created the SeedData.cs file to seed the db

--- a/SQL_Query_Logger/appsettings.json
+++ b/SQL_Query_Logger/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SQL_Query_LoggerContext": "Server=(localdb)\\mssqllocaldb;Database=SQL_Query_LoggerContext-c8a87fb9-b4bf-4ab2-b7ff-661ee8c45476;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
