--- a/SQL_Query_Logger/SQL_Query_Logger.csproj
+++ b/SQL_Query_Logger/SQL_Query_Logger.csproj
@@ -13,6 +13,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
