--- a/.github/workflows/master_sql-query-logger.yml
+++ b/.github/workflows/master_sql-query-logger.yml
@@ -32,7 +32,7 @@ jobs:
         run: dotnet tool install -g dotnet-ef
 
       - name: dotnet bundle migration
-        run: dotnet ef migrations bundle -p SQL_Query_Logger/SQL_Query_Logger.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate
+        run: dotnet ef migrations bundle -p -v SQL_Query_Logger/SQL_Query_Logger.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate
 
 
       - name: Upload artifact for deployment job
