--- a/.github/workflows/master_sql-query-logger.yml
+++ b/.github/workflows/master_sql-query-logger.yml
@@ -29,10 +29,7 @@ jobs:
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: dotnet install ef
-        run: dotnet tool install -g dotnet-ef
-
-      - name: dotnet bundle migration
-        run: dotnet ef migrations bundle -p -v SQL_Query_Logger/SQL_Query_Logger.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate
+        run: dotnet tool install -g dotnet-ef -v
 
 
       - name: Upload artifact for deployment job
